Fixed image issues on announces page and title display when it's too long

--- a/site/public/css/annonces.css
+++ b/site/public/css/annonces.css
@@ -44,6 +44,16 @@ body {
 
 .annonce-title{
     background-color: transparent;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
+}
+
+.annonce-user {
+    position: fixed;
 }
 
 .annonce-element {
@@ -69,17 +79,18 @@ body {
     padding-top: 20px;
     padding-left: 20px;
     /* padding-right: 10px; */
+    border-radius: 20px;
     height: 50px;
     margin-bottom: 10px;
     width: 90%;
     text-align: left;
-    overflow-y: scroll;
     color: white;
     background-color: transparent;
 }
 
 .user_text{
-font-size: 1.5em;
+    font-size: 1.5em;
+    margin-bottom: 0px;
     background-color: transparent;
 }
 
@@ -114,6 +125,8 @@ h4{
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    overflow: hidden;
+    object-fit: contain;
 }
 
 #annonce-info {
